--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -1,8 +1,22 @@
-<section>
+<!-- <section>
     <h1>Quero me inscrever!</h1>
     <span>{{message}}</span>
     <div class="btns-container">
         <app-button [buttonConfig]="textBtnConfig"
                 (textBtnClickEmt)="onClickEventReceived($event)"></app-button>
     </div>
-  </section>
+</section> -->
+<div class="container p-5">
+  <div class="row">
+    <div class="col-8">
+      <div class="row">
+        <div class="col">
+          <app-input [expectedvalue]="'israel'" [label]="'*Nome'"></app-input>
+        </div>
+        <div class="col">
+          <app-input [expectedvalue]="'sodano'" [label]="'*Sobrenome'"></app-input>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
