--- a/src/app/components/card/card.component.html
+++ b/src/app/components/card/card.component.html
@@ -1,6 +1,9 @@
-<div class="form-card {{formclass}}">
-    <h1>VESTIBULAR 2020</h1>
-    <span>
-        05 de abr. 08:00 – 15:00 BRT <br />Local a ser determinado
-    </span>
-</div>
+<div class="card">
+    <div class="container">
+        <h4>VESTIBULAR 2020</h4>
+        <br />
+        <span>
+            05 de abr. 08:00 – 15:00 BRT <br />Local a ser determinado
+        </span>
+    </div>
+  </div>
