--- a/src/app/pages/form/form.component.html
+++ b/src/app/pages/form/form.component.html
@@ -6,7 +6,9 @@
                 (textBtnClickEmt)="onClickEventReceived($event)"></app-button>
     </div>
 </section> -->
+<app-card></app-card>
 <div class="container p-5">
+  
   <div class="row">
     <div class="col-8">
       <div class="row">
